--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  flutter_mailer: ^3.0.0
+  mailer: ^6.0.0
   cupertino_icons: ^1.0.8
   firebase_core: ^3.12.0
   firebase_storage: ^12.4.3
