--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.0
+  sdk: ^3.5.4
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -77,6 +77,14 @@ flutter:
     - assets/Widget/Login/login_button.png
     - assets/Widget/Login/input_frame.png
     - assets/Widget/Login/logo.png
+    - assets/images/Main/main_banner.png
+    - assets/images/Main/main_chatbot_banner.png
+    - assets/images/Main/diary.png
+    - assets/images/Main/challenge.png
+    - assets/images/Main/daily_line.png
+    - assets/images/Main/counsel_center.png
+    - assets/images/DayLine/letter_HARU.png
+    - assets/images/DayLine/speech_bubble.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
