--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  geolocator: ^10.1.0
+  http: ^1.3.0
+  flutter_naver_map: ^1.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -127,6 +130,9 @@ flutter:
     - assets/images/DayLine/background_image.png
     - assets/images/DayLine/default_profile.png
     - assets/images/success.png
+    - assets/images/HelpCenter/danger_sign.png
+    - assets/images/HelpCenter/emergency_number.png
+    - assets/images/HelpCenter/suicide_prevention.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
