--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   geolocator: ^10.1.0
   http: ^1.3.0
   flutter_naver_map: ^1.1.1
+  permission_handler :
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -80,6 +81,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
+    - assets/map/health_centers.json
     - assets/images/
     - assets/Widget/Login/character.png
     - assets/Widget/Login/phrase.png
