--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.7.0
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -41,7 +41,9 @@ dependencies:
   image_picker:
   firebase_storage: ^12.4.3
   firebase_auth: ^5.5.0
+  intl: ^0.20.2
   google_fonts: ^6.2.1
+  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +80,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/
+    - assets/images/character.png
     - assets/Widget/Login/character.png
     - assets/Widget/Login/phrase.png
     - assets/Widget/Login/button1.png
@@ -115,18 +118,8 @@ flutter:
     - assets/face/face28.png
     - assets/face/face29.png
     - assets/face/face30.png
-    - assets/images/Main/main_banner.png
-    - assets/images/Main/main_chatbot_banner.png
-    - assets/images/Main/diary.png
-    - assets/images/Main/challenge.png
-    - assets/images/Main/daily_line.png
-    - assets/images/Main/counsel_center.png
-    - assets/images/DayLine/letter_HARU.png
-    - assets/images/DayLine/speech_bubble.png
-    - assets/images/DayLine/topic_cloud.png
-    - assets/images/DayLine/background_image.png
-    - assets/images/DayLine/default_profile.png
-    - assets/images/success.png
+
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
