--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -52,5 +52,9 @@
     </dict>
     <key>NSLocationWhenInUseUsageDescription</key>
     <string>사용자의 위치를 지도에서 표시하기 위해 사용됩니다.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>이 앱은 음성 녹음을 위해 마이크를 사용합니다.</string>
+    <key>NSSpeechRecognitionUsageDescription</key>
+    <string>앱에서 음성을 인식하기 위해 필요합니다.</string>
 </dict>
 </plist>
