--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,11 @@ dependencies:
   geolocator: ^10.1.0
   http: ^1.3.0
   flutter_naver_map: ^1.1.1
-  permission_handler :
+  path_provider: ^2.0.5
+  audioplayers: ^5.2.0
+  permission_handler: ^11.0.1
+  flutter_sound: ^9.2.13
+  speech_to_text: ^7.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -142,7 +146,7 @@ flutter:
     - assets/Widget/Community/review.png
     - assets/Widget/Community/smile.png
     - assets/Widget/Community/write.png
-    - assets/images/character.png
+    - assets/images/Chatbot/bubbleChat.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
