--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   google_fonts: ^6.2.1
   intl: ^0.20.2
   fl_chart: ^0.66.1
+  chat_gpt_sdk: ^3.1.4
 
 dev_dependencies:
   flutter_test:
