--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
+    - assets/prompt/prompt.txt
     - assets/map/health_centers.json
     - assets/images/
     - assets/Widget/Login/character.png
