--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_sound: ^9.2.13
   speech_to_text: ^7.0.0
   flutter_tts: ^3.3.0
-
+  flutter_dotenv: ^5.0.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cloud_firestore: ^5.6.4
@@ -89,6 +89,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
+    - .env
     - assets/prompt/prompt.txt
     - assets/map/health_centers.json
     - assets/images/
