--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,7 +76,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 
-flutter_icons:
+flutter_launcher_icons:
   android: true
   ios: true
   image_path: "assets/images/icon.png"
